attempt to fix cut off audio player handle

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -680,16 +680,19 @@ color:#000!important;
 }
 .slide__audio {
 	position: relative;
-	width: 300px;
+	width: 312px;
 	top: 20%;
 	margin: 0 auto;
 }
 
 .audio__controls {
-	height: 300px;
-	width: 300px;
+	height: 312px;
+	width: 312px;
 	position: relative;
     cursor: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .slide__audio .slide__audio-player {
@@ -698,14 +701,9 @@ color:#000!important;
 
 /* this is the full svg circle */
 .slide__audio #circle {
-	position: absolute;
-	top: 150px;
-	left: 150px;
-	bottom: 0;
 	stroke: var(--dark-green);
     fill: var(--dark-green);
 	border-radius: 100%;
-	transform: translate(-50%, -50%);
 	pointer-events: auto;
 	z-index: 4;
     overflow: visible;
@@ -746,17 +744,17 @@ color:#000!important;
 
 .play-pause {
 	position: absolute;
-	left: 150px;
-	top: 150px;
 	z-index: 6;
 	width: 150px;
 	background: transparent !important;
 	height: 150px;
 	cursor: pointer;
-	transform: translate(-50%, -50%);
 	border: 0;
 	padding: 0;
 	margin: 0;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .play-pause:focus{
